# django-template

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  runserver.sh
app/project/: settings.py  urls.py
app/users/: admin.py
app/users/migrations/: 0001_initial.py
nginx/conf.d/: default.conf
